Parameters in spring.data.cassandra.config file will override defaults
This commit changes two things:

1. Any primitive on CassandraProperties are replaced with object values.
   This allows distinguishing between defaults values and no-values. Then
   CassandraAutoConfiguration.mapConfig() can use whenNonNull() predicate
   to ignore those.

2. CassandraProperties no longer populate default values on any
   property. With that, the defaults can be applied on top of the file
   spring.data.cassandra.config; i.e. the config file have higher
   precedence than the defaults, but lower that any spring.data.cassandra.*
   property.

On the test side, the file `override-defaults.conf` is defined to override
the values that were non-overridable with values which are different from
the default.

Closes gh-31025